[gd_scene load_steps=4 format=3 uid="uid://3lu7uxj13xes"]

[ext_resource type="PackedScene" uid="uid://chjyrf0f17hhk" path="res://gamemode_event.tscn" id="1_7brkr"]
[ext_resource type="Script" path="res://cam_fs_auto_scale.gd" id="2_mjatt"]
[ext_resource type="Script" path="res://screen_controller.gd" id="3_cwo7r"]

[node name="scene" type="Node2D"]

[node name="debug_bad_area" type="ColorRect" parent="."]
offset_left = -400.0
offset_top = -592.0
offset_right = 400.0
offset_bottom = 592.0
color = Color(1, 0, 1, 1)

[node name="debug_safe_area" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -576.0
offset_right = 384.0
offset_bottom = 576.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="control_bg" type="Node2D" parent="."]

[node name="bg_ts" type="TextureRect" parent="control_bg"]
clip_contents = true
offset_left = -384.0
offset_top = -576.0
offset_right = 384.0
expand_mode = 1
stretch_mode = 3

[node name="bg_bs" type="TextureRect" parent="control_bg"]
offset_left = -384.0
offset_right = 384.0
offset_bottom = 576.0
expand_mode = 1
stretch_mode = 3

[node name="control_gamemode" type="Node2D" parent="."]

[node name="gamemode_event" parent="control_gamemode" instance=ExtResource("1_7brkr")]

[node name="control_fade" type="Node2D" parent="."]
position = Vector2(-384, -576)

[node name="fade_ts" type="ColorRect" parent="control_fade"]
offset_right = 768.0
offset_bottom = 576.0
color = Color(0, 0, 0, 1)

[node name="fade_bs" type="ColorRect" parent="control_fade"]
offset_top = 576.0
offset_right = 768.0
offset_bottom = 1152.0
color = Color(0, 0, 0, 1)

[node name="cam" type="Camera2D" parent="."]
script = ExtResource("2_mjatt")

[node name="screen_controller" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_cwo7r")
